--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwind build src/css/tailwind.css -o static/css/tailwind_compiled.css",
+    "build:css": "tailwind build tudutul_webapp/src/css/tailwind.css -o tudutul_webapp/static/css/tailwind_compiled.css",
     "dev": "npx webpack --mode development --watch"
   },
   "author": "",
